Fixed CSS of book covers
Book cover containers were not covering the whole image of the book.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11332,7 +11332,10 @@ textarea.form-control-lg {
 }
 
 .book-cover-sm {
-  width: 150px;
+  width: 136px;
+  height: 210px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .material-icons.md-18 {
