--- a/resources/css/components/book.scss
+++ b/resources/css/components/book.scss
@@ -3,5 +3,7 @@
 }
 
 .book-cover-sm {
-    width: 150px;
+    width: 136px;
+    height: 210px;
+    object-fit: cover;
 }
